# ft_printf

./: ._.idea  ._cmake-build-debug  CMakeLists.txt  a.out  arr_point.c  chek  flags.c  ft_printf.c  ft_printf.h  ft_printf.h.gch  func.c  libft.h  main.c  sub_func.c
libft/: #ft_strjoin.c#  #ft_strncmp.c#  Makefile~  ft_strdup.c~
